--- a/templates/partoandisheh/css/partoandisheh-rtl.less
+++ b/templates/partoandisheh/css/partoandisheh-rtl.less
@@ -223,6 +223,12 @@ footer{
     }
   }
 }
+.articleFullImage{
+  margin-bottom: -70px;
+  @media(max-width: 759px){
+    margin-bottom: 15px;
+  }
+}
 .blogImagePlaceholder{
   svg{
     circle{
