--- a/templates/partoandisheh/css/partoandisheh-rtl.less
+++ b/templates/partoandisheh/css/partoandisheh-rtl.less
@@ -155,7 +155,104 @@ main{
   position: relative;
   z-index: 2;
 }
-section{}
+section{
+  &.categoryBannerSection{
+    div{
+      &.wrapper{
+        position: absolute;
+        top: 40px;
+        bottom: 40px;
+        left: 40px;
+        right: 40px;
+        .box-shadow(inset 0 0 0 2px rgba(255, 255, 255, .5));
+        .border-radius(3px);
+        > *{
+          text-decoration: none;
+          background-color: fade(@primary, 80%);
+          .transition();
+          &:hover{
+            background-color: @primary;
+          }
+        }
+      }
+    }
+  }
+}
+div{
+  &.sideModule{
+    h3{
+      &.head{
+        &:after{
+          content: "";
+          display: block;
+          width: 30px;
+          height: 2px;
+          background-color: rgba(255, 255, 255, .7);
+          margin-top: 5px;
+        }
+      }
+      + div{
+        position: relative;
+      }
+    }
+    &.hasCover{
+      position: relative;
+      &:before{
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+      }
+      &.primaryCover{
+        &:before{
+          background-color: fade(@primary, 80%);
+        }
+      }
+    }
+    &.sideServices{
+      ul{
+        padding: 0;
+        margin: 0;
+        li{
+          margin-top: 1px;
+          &:not(:first-child){}
+          a{
+            display: block;
+            padding: 15px 25px 15px;
+            color: #222;
+            text-decoration: none;
+            position: relative;
+            font-size: 14px;
+            .font;
+            .transition();
+          }
+          &:hover,
+          &.current{
+            a{
+              background-color: @secondary;
+              color: #fff;
+              &:after{
+                content: "";
+                position: absolute;
+                right: 0;
+                top: 0;
+                bottom: 0;
+                width: 8px;
+                background-color: darken(@secondary, 10%);
+              }
+            }
+          }
+        }
+      }
+    }
+    &.sideConsult{
+      background: url("../../../images/psychologist.jpg") center;
+      background-size: cover;
+    }
+  }
+}
 footer{
   &:before{
     content: '';
@@ -222,6 +319,32 @@ footer{
         }
       }
     }
+  }
+}
+.category-desc{
+  p{
+    font-weight: 300;
+    color: #999;
+    position: relative;
+    padding: 0 0 10px;
+    margin: 0 0 20px;
+    .font;
+    &:after{
+      content: "";
+      position: absolute;
+      bottom: 0;
+      width: 40px;
+      height: 2px;
+      background-color: @primary;
+      left: 50%;
+      .transform(translateX(-50%));
+    }
+  }
+  h2{
+    .font;
+    color: #222;
+    font-weight: 700;
+    margin: 0;
   }
 }
 .specialty{
