Home Page - Not Completed

--- a/templates/partoandisheh/css/partoandisheh-rtl.less
+++ b/templates/partoandisheh/css/partoandisheh-rtl.less
@@ -149,6 +149,9 @@ header{
       }
     }
   }
+  &.home{
+    z-index: 3;
+  }
 }
 main{
   background-color: #fff;
@@ -217,6 +220,7 @@ section{
     }
   }
   &.statistics{
+    padding-bottom: 0;
     &:after{
       position: absolute;
       content: "";
@@ -226,6 +230,25 @@ section{
       height: 40px;
       background-color: #fff;
       bottom: 0;
+    }
+    @media(max-width: 759px){
+      padding-bottom: 30px;
+      &:after{
+        display: none;
+      }
+    }
+  }
+  &.slideshow{
+    h2,p{
+      text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
+    }
+    @media(max-width: 759px){
+      h2{
+        font-size: 24px;
+      }
+      p{
+        font-size: 14px;
+      }
     }
   }
 }
@@ -643,5 +666,77 @@ footer{
   }
   &:focus{
     border-color: @secondary;
+  }
+}
+
+div{
+  &.uk-offcanvas{
+    &:before{
+      background-color: rgba(0, 0, 0, .5);
+    }
+    div{
+      &.uk-offcanvas-bar{
+        background-color: #fff;
+        a{
+          &.logo{
+            color: #e0e0e0;
+          }
+        }
+        div{
+          &.offcanvasTop{
+            background-color: @primary;
+            height: 70px;
+            a{
+              color: #fff;
+            }
+            &.active{
+              height: 60px;
+            }
+          }
+        }
+        ul{
+          &.uk-nav{
+            >li{
+              > a{
+                font-size: 16px;
+                font-weight: 700;
+                padding: 15px 0;
+                color: #222;
+                .font;
+              }
+              ul{
+                >li{
+                  >a{
+                    font-size: 14px;
+                    display: block;
+                    padding: 0 15px 20px 0;
+                    color: #333;
+                    .font;
+                  }
+                }
+              }
+              &.uk-parent{
+                > a{
+                  &:after{
+                    background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2213%22%20height%3D%2213%22%20viewBox%3D%220%200%2013%2013%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Crect%20fill%3D%22%23666%22%20width%3D%2213%22%20height%3D%221%22%20x%3D%220%22%20y%3D%226%22%20%2F%3E%0A%20%20%20%20%3Crect%20fill%3D%22%23666%22%20width%3D%221%22%20height%3D%2213%22%20x%3D%226%22%20y%3D%220%22%20%2F%3E%0A%3C%2Fsvg%3E");
+                    opacity: .3;
+                  }
+                }
+                &.uk-open{
+                  > a{
+                    &:after{
+                      background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2213%22%20height%3D%2213%22%20viewBox%3D%220%200%2013%2013%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Crect%20fill%3D%22%23666%22%20width%3D%2213%22%20height%3D%221%22%20x%3D%220%22%20y%3D%226%22%20%2F%3E%0A%3C%2Fsvg%3E");
+                    }
+                  }
+                }
+              }
+              &:not(:first-child){
+                border-top: 1px solid #f0f0f0;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
