--- a/administrator/components/com_rsform/models/forms/filter_submissions.xml
+++ b/administrator/components/com_rsform/models/forms/filter_submissions.xml
@@ -63,7 +63,7 @@
                 todaybutton="true"
                 hint="RSFP_FROM"
                 format="%Y-%m-%d %H:%M:%S"
-                onchange="this.form.submit();"
+				filter="USER_UTC"
             />
 
         <field
@@ -73,7 +73,7 @@
                 todaybutton="true"
                 hint="RSFP_TO"
                 format="%Y-%m-%d %H:%M:%S"
-                onchange="this.form.submit();"
+				filter="USER_UTC"
         />
     </fields>
 
