--- a/templates/partoandisheh/css/partoandisheh-rtl.less
+++ b/templates/partoandisheh/css/partoandisheh-rtl.less
@@ -352,6 +352,13 @@ div{
       background-size: cover;
     }
   }
+  &[itemprop="articleBody"]{
+    h1,h2,h3,h4,h5,h6{
+      .font;
+      font-weight: bold;
+      color: @secondary;
+    }
+  }
 }
 footer{
   &:before{
